# keentune_brain

./: .gitignore  Makefile  README.md  README_cn.md  keentune-brain.a23.spec  keentune-brain.service  keentune-brain.spec  packup.py  requirements.txt  setup.cfg  setup.py  warpping.py
brain/: brain.conf  brain.py
brain/algorithm/qe/: qe.py
brain/algorithm/sensitize/: sensitize.py  sensitizer.py
brain/algorithm/tuning/: bgcs.py  boBase.py  hord.py  lamcts.py  random.py  tpe.py
brain/algorithm/tunning/: base.py  bgcs.py  boBase.py  hord.py  lamcts.py  random.py  tpe.py  ultra.py
brain/common/: config.py  dataset.py  pylog.py  system.py  tools.py
brain/controller/: __init__.py  optimizer.py  sensi.py  sensitize.py  system.py  tunning.py
brain/visualization/: common.py  paramGraph.py  sensiGraph.py  tuneGraph.py
debian/: changelog  control  keentune-brain.install  keentune-brain.postrm  keentune-brain.prerm  lintian-overrides  rules  source.lintian-overrides
man/: keentune-brain.8  keentune-brain.conf.5
test/: main.py  test_brain_acquire.py  test_brain_available.py  test_brain_best.py  test_brain_end.py  test_brain_feedback.py  test_brain_init.py  test_brain_sensitize.py  test_brain_sensitize_delete.py  test_brain_sensitize_list.py
