[metadata]
name = keentune-brain
version = 1.0
summary = KeenTune brain unit
author = UNKNOWN
author_email = UNKNOWN
classifier =
    Environment:: KeenTune
    IntendedAudience :: Information Technology
    IntendedAudience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Programming Language :: Python :: 3.6
    ProgrammingLanguage :: Python
    
[files]
packages = brain

data_files = 
    /etc/keentune/conf = brain/brain.conf
    
requires = requirements.txt

[entry_points]
console_scripts = 
    keentune-brain = brain.brain:main
